<resources>
    <string name="app_name">Assignment</string>
    <string name="loading">Loading...</string>
    <string name="empty">You don\'t have Student yet :(</string>
    <string name="add_student">Add Student</string>
    <string name="student_Name">Student Name</string>
    <string name="marathi_marks">Marathi</string>
    <string name="maths_marks">Maths</string>
    <string name="history_marks">History</string>
    <string name="show_all">Show All</string>
</resources>
